--- a/docker/dockerfile
+++ b/docker/dockerfile
@@ -2,9 +2,16 @@
 # not particularly care what OS runs underneath
 FROM python:3.9
 
+RUN mkdir vm
+VOLUME ["/vm/data"]
+
+ARG CACHEBUST=1
 RUN git clone https://github.com/matthieuDev/coproximity_create_vocabulary.git
 
 WORKDIR coproximity_create_vocabulary
-#RUN pip install --upgrade -r requirements.txt
+
+RUN echo "parent_folder_init = '/vm/data'" >>  ./coproximity_create_vocabulary/.env
+
 RUN pip install -e . 
-RUN python coproximity_create_vocabulary/test_requirements.py
+
+CMD python coproximity_create_vocabulary/test_requirements.py
