--- a/docker/dockerfile
+++ b/docker/dockerfile
@@ -3,15 +3,22 @@
 FROM python:3.9
 
 RUN mkdir vm
-VOLUME ["/vm/data"]
+VOLUME ["/vm/data/"]
 
-ARG CACHEBUST=1
+RUN pip install spacy
+RUN python -m spacy download pt_core_news_sm
+
 RUN git clone https://github.com/matthieuDev/coproximity_create_vocabulary.git
 
 WORKDIR coproximity_create_vocabulary
+RUN echo "parent_folder_init = '/vm/data/'" >>  ./coproximity_create_vocabulary/.env
+#pip install pre cache
+RUN pip install -e . 
 
-RUN echo "parent_folder_init = '/vm/data'" >>  ./coproximity_create_vocabulary/.env
+ARG CACHEBUST=1
+RUN git pull
+
 
 RUN pip install -e . 
 
-CMD python coproximity_create_vocabulary/test_requirements.py
+CMD python coproximity_create_vocabulary/main_generate_vocab.py -p pt -v portuguese --spacy_model pt_core_news_sm --disable_tag tagger_parser_ner
