--- a/docker/dockerfile
+++ b/docker/dockerfile
@@ -22,4 +22,4 @@ RUN git pull
 
 RUN pip install -e . 
 
-CMD python coproximity_create_vocabulary/main_generate_vocab.py -p de -v german --spacy_model de_core_news_sm --disable_tag tagger_parser_ner
+CMD python coproximity_create_vocabulary/main_generate_vocab.py -p de -v german --spacy_model de_core_news_sm --disable_tag tagger_parser_ner --fasttext_model fr
