--- a/docker/dockerfile
+++ b/docker/dockerfile
@@ -6,20 +6,20 @@ RUN mkdir vm
 VOLUME ["/vm/data/"]
 
 RUN pip install spacy
-RUN python -m spacy download de_core_news_sm
+ARG spacy_model
+RUN python -m spacy download $spacy_model
 
 RUN git clone https://github.com/matthieuDev/coproximity_create_vocabulary.git
 
 WORKDIR coproximity_create_vocabulary
-RUN echo "parent_folder_init = '/vm/data/'\nset_allowed_download_projects = 'fr_en_it_de'" >>  ./coproximity_create_vocabulary/.env
-#pip install pre cache
-RUN pip install -e . 
+ARG set_allowed_download_projects='fr_en_it_de'
+RUN echo "parent_folder_init = '/vm/data/'\nset_allowed_download_projects = '$set_allowed_download_projects'" >>  ./coproximity_create_vocabulary/.env
 
-ARG CACHEBUST=1
-RUN echo "$CACHEBUST"
 RUN git pull
-
-
 RUN pip install -e . 
 
-CMD python coproximity_create_vocabulary/main_generate_vocab.py -p de -v german --spacy_model de_core_news_sm --disable_tag tagger_parser_ner --fasttext_model fr
+ARG additional_arg
+ENV additional_arg=${additional_arg}
+ENV spacy_model=${spacy_model}
+# --spacy_model de_core_news_sm -p de -v german --disable_tag tagger_parser_ner --fasttext_model de
+CMD python coproximity_create_vocabulary/main_generate_vocab.py --spacy_model $spacy_model $additional_arg
