--- a/docker/dockerfile
+++ b/docker/dockerfile
@@ -21,5 +21,5 @@ RUN pip install -e .
 ARG additional_arg
 ENV additional_arg=${additional_arg}
 ENV spacy_model=${spacy_model}
-# --spacy_model de_core_news_sm -p de -v german --disable_tag tagger_parser_ner --fasttext_model de
+# --spacy_model de_core_news_sm -p de -l german --disable_tag tagger_parser_ner --fasttext_model de
 CMD python coproximity_create_vocabulary/main_generate_vocab.py --spacy_model $spacy_model $additional_arg
