--- a/docker/dockerfile
+++ b/docker/dockerfile
@@ -12,11 +12,11 @@ RUN python -m spacy download $spacy_model
 RUN git clone https://github.com/matthieuDev/coproximity_create_vocabulary.git
 
 WORKDIR coproximity_create_vocabulary
-ARG set_allowed_download_projects='fr_en_it_de'
-RUN echo "parent_folder_init = '/vm/data/'\nset_allowed_download_projects = '$set_allowed_download_projects'" >>  ./coproximity_create_vocabulary/.env
-
 RUN git pull
 RUN pip install -e . 
+
+ARG set_allowed_download_projects='fr_en_it_de'
+RUN python ./coproximity_create_vocabulary/generate_env.py --parent_folder_init /vm/data/ --allowed_download_projects $set_allowed_download_projects
 
 ARG additional_arg
 ENV additional_arg=${additional_arg}
