--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 
 build/
 vocabulary/
+docker/log.txt
 coproximity_create_vocabulary/data_conf.py
 coproximity_create_vocabulary.egg-info/
 coproximity_create_vocabulary/.env
