--- a/docker/dockerfile
+++ b/docker/dockerfile
@@ -13,6 +13,12 @@ RUN python -m spacy download $spacy_model
 RUN git clone https://github.com/matthieuDev/coproximity_create_vocabulary.git
 
 WORKDIR coproximity_create_vocabulary
+RUN pip install -e . 
+
+#stop the cache
+ARG STOP_CACHE
+RUN echo ${STOP_CACHE}
+
 RUN git pull
 RUN pip install -e . 
 
